# plutus-auction

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml  plutus-auction.cabal
app/: Main.hs
lib/Auction/: Blueprint.hs  Validator.hs
nix/: project.nix  shell.nix
validator/: .gitignore
