cabal-version: 3.0
name:          plutus-auction
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -O2 -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints

common deps
  build-depends:
    , base        >=4.9       && <5
    , bytestring  ^>=0.11.5.3

library
  import:          lang, deps
  hs-source-dirs:  lib
  other-modules:
  exposed-modules:
    Auction.Blueprint
    Auction.Validator

  build-depends:
    , containers         ^>=0.6
    , plutus-core        ^>=1.33.1
    , plutus-ledger-api  ^>=1.33.1
    , plutus-tx          ^>=1.33.1
    , plutus-tx-plugin   ^>=1.33.1

executable blueprint
  import:         lang, deps
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , plutus-auction
    , plutus-ledger-api  ^>=1.33.1
